[gd_scene load_steps=4 format=3 uid="uid://bpqvj8n7qwqxp"]

[ext_resource type="Script" uid="uid://l0bfj8h3iugn" path="res://scripts/characters/PlayerController.gd" id="1_player"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
height = 1.8

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
fov = 75.0

[node name="InteractionRay" type="RayCast3D" parent="CameraController/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 4

[node name="UI" type="CanvasLayer" parent="."]

[node name="InteractionPrompt" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 80.0
text = "INTERACTION_PROMPT"
horizontal_alignment = 1
vertical_alignment = 1
visible = false
